--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,11 +5,13 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Nicolytics</title>
 	</head>
-	<body class="bg-white pl-[calc(100vw-100%)] text-black antialiased dark:bg-gray-950 dark:text-white">
-		<section class="mx-auto max-w-3xl px-4 sm:px-6 xl:max-w-5xl xl:px-0">
+	<body class="bg-gray pl-[calc(100vw-100%)] text-black antialiased dark:bg-gray-950 dark:text-white ">
+		<section class="mx-auto max-w-3xl px-4 sm:px-6 xl:max-w-5xl xl:px-0 border-gray-200 border-l">
+		<div class="ml-5">
 			<slot />
+		</div>
 		</section>
 	</body>
 </html>
