--- a/src/components/HomeBlogEntries.astro
+++ b/src/components/HomeBlogEntries.astro
@@ -1,121 +1,62 @@
-<main class="mb-auto">
-  <div class="space-y-2 pt-6 pb-8 md:space-y-5">
-    <h1
-      class="text-3xl leading-9 font-extrabold tracking-tight text-gray-900 sm:text-4xl sm:leading-10 md:text-6xl md:leading-14 dark:text-gray-100"
-    >
-      Latest
-    </h1><p class="text-lg leading-7 text-gray-500 dark:text-gray-400">
-      A blog created with Next.js and Tailwind.css
-    </p>
-  </div>
-  <ul>
-    <li class="py-12">
-      <article>
-        <div
-          class="space-y-2 xl:grid xl:grid-cols-4 xl:items-baseline xl:space-y-0"
-        >
-          <dl>
-            <dt class="sr-only">Published on</dt><dd
-              class="text-base leading-6 font-medium text-gray-500 dark:text-gray-400"
-            >
-              <time datetime="2023-08-05T00:00:00.000Z">August 5, 2023</time>
-            </dd>
-          </dl><div class="space-y-5 xl:col-span-3">
-            <div class="space-y-6">
-              <div>
+---
+import { imageMetadata } from "astro/assets/utils";
+import PocketBase from "pocketbase";
+
+const pb = new PocketBase('http://127.0.0.1:8090')
+const entries = await pb.collection('posts').getList(1,5,{
+    sort: '-publish_date',
+})
+
+---
+
+<main class="mb-auto py-8">
+
+  <ul >
+    {entries.items.map((item:any)=> (
+        <li class="pb-12">
+
+            <dl>
+            <dt class="sr-only">Published on</dt>
+          </dl>
+          <div class="space-y-5 xl:col-span-3">
+            <div>
+              <div class="">
+                    <a
+                      class="text-indigo-700 hover:text-primary-600 dark:hover:text-primary-400 mr-3 text-sm font-medium "
+                      href="/tags/next-js">{item.main_category}</a>
+              </div>
                 <h2 class="text-2xl leading-8 font-bold tracking-tight">
                   <a
-                    class="text-gray-900 dark:text-gray-100"
+                    class="text-gray-800 dark:text-gray-100"
                     href="/blog/release-of-tailwind-nextjs-starter-blog-v2.0"
-                    >Release of Tailwind Nextjs Starter Blog v2.0</a
-                  >
-                </h2><div class="flex flex-wrap">
-                  <a
-                    class="text-primary-500 hover:text-primary-600 dark:hover:text-primary-400 mr-3 text-sm font-medium uppercase"
-                    href="/tags/next-js">next-js</a
-                  ><a
-                    class="text-primary-500 hover:text-primary-600 dark:hover:text-primary-400 mr-3 text-sm font-medium uppercase"
-                    href="/tags/tailwind">tailwind</a
-                  ><a
-                    class="text-primary-500 hover:text-primary-600 dark:hover:text-primary-400 mr-3 text-sm font-medium uppercase"
-                    href="/tags/guide">guide</a
-                  ><a
-                    class="text-primary-500 hover:text-primary-600 dark:hover:text-primary-400 mr-3 text-sm font-medium uppercase"
-                    href="/tags/feature">feature</a
-                  >
-                </div>
-              </div><div
-                class="prose max-w-none text-gray-500 dark:text-gray-400"
+                    >{item.title}</a>
+                </h2>
+                <div
+                class="prose max-w-none text-gray-600 dark:text-gray-400"
               >
-                Release of Tailwind Nextjs Starter Blog template v2.0,
-                refactored with Nextjs App directory and React Server Components
-                setup.Discover the new features and how to migrate from V1.
+                {item.abstract}
               </div>
-            </div><div class="text-base leading-6 font-medium">
-              <a
-                class="text-primary-500 hover:text-primary-600 dark:hover:text-primary-400"
-                aria-label='Read more: "Release of Tailwind Nextjs Starter Blog v2.0"'
-                href="/blog/release-of-tailwind-nextjs-starter-blog-v2.0"
-                >Read more →</a
-              >
-            </div>
-          </div>
-        </div>
-      </article>
-    </li>
-    <li class="py-12">
-      <article>
-        <div
-          class="space-y-2 xl:grid xl:grid-cols-4 xl:items-baseline xl:space-y-0"
-        >
-          <dl>
-            <dt class="sr-only">Published on</dt><dd
-              class="text-base leading-6 font-medium text-gray-500 dark:text-gray-400"
+              <div class="pt-4">
+                <dd
+              class="text-base leading-6  text-gray-400 dark:text-gray-300"
             >
-              <time datetime="2023-08-05T00:00:00.000Z">August 5, 2023</time>
+              <time datetime={item.publish_date}>{  
+              () => {
+                const localDate = new Date(item.publish_date)
+                const formatedDate = `${localDate.getDate()} de ${localDate.toLocaleString('default', { month: 'long' })}, ${localDate.getFullYear()}`  
+                return formatedDate;
+              }
+              } </time>
             </dd>
-          </dl><div class="space-y-5 xl:col-span-3">
-            <div class="space-y-6">
-              <div>
-                <h2 class="text-2xl leading-8 font-bold tracking-tight">
-                  <a
-                    class="text-gray-900 dark:text-gray-100"
-                    href="/blog/release-of-tailwind-nextjs-starter-blog-v2.0"
-                    >Release of Tailwind Nextjs Starter Blog v2.0</a
-                  >
-                </h2><div class="flex flex-wrap">
-                  <a
-                    class="text-primary-500 hover:text-primary-600 dark:hover:text-primary-400 mr-3 text-sm font-medium uppercase"
-                    href="/tags/next-js">next-js</a
-                  ><a
-                    class="text-primary-500 hover:text-primary-600 dark:hover:text-primary-400 mr-3 text-sm font-medium uppercase"
-                    href="/tags/tailwind">tailwind</a
-                  ><a
-                    class="text-primary-500 hover:text-primary-600 dark:hover:text-primary-400 mr-3 text-sm font-medium uppercase"
-                    href="/tags/guide">guide</a
-                  ><a
-                    class="text-primary-500 hover:text-primary-600 dark:hover:text-primary-400 mr-3 text-sm font-medium uppercase"
-                    href="/tags/feature">feature</a
-                  >
-                </div>
-              </div><div
-                class="prose max-w-none text-gray-500 dark:text-gray-400"
-              >
-                Release of Tailwind Nextjs Starter Blog template v2.0,
-                refactored with Nextjs App directory and React Server Components
-                setup.Discover the new features and how to migrate from V1.
               </div>
-            </div><div class="text-base leading-6 font-medium">
-              <a
-                class="text-primary-500 hover:text-primary-600 dark:hover:text-primary-400"
-                aria-label='Read more: "Release of Tailwind Nextjs Starter Blog v2.0"'
-                href="/blog/release-of-tailwind-nextjs-starter-blog-v2.0"
-                >Read more →</a
-              >
-            </div>
           </div>
+
         </div>
-      </article>
-    </li>
+
+        </li>
+
+    ))}
+
+
   </ul>
 </main>
