--- a/src/components/HomeBlogEntries.astro
+++ b/src/components/HomeBlogEntries.astro
@@ -1,48 +1,46 @@
 ---
 import { imageMetadata } from "astro/assets/utils";
-import PocketBase from "pocketbase";
+import { getCollection } from "astro:content";
 
-const pb = new PocketBase('http://127.0.0.1:8090')
-const entries = await pb.collection('posts').getList(1,5,{
-    sort: '-publish_date',
-})
+const allBlogPosts = await getCollection("blog_posts");
+const orderPost = allBlogPosts.sort((a:any, b:any) => {
+  return new Date(b.data.published_at) - new Date(a.data.published_at);
+});
 
 ---
+
+
 
 <main class="mb-auto py-8">
 
   <ul >
-    {entries.items.map((item:any)=> (
-        <li class="pb-12">
+    {allBlogPosts.map((item:any)=> (
 
+        <li class="pb-12">
+           <a href="/item.data.main_category}/release-of-tailwind-nextjs-starter-blog-v2.0"> 
             <dl>
             <dt class="sr-only">Published on</dt>
           </dl>
           <div class="space-y-5 xl:col-span-3">
             <div>
-              <div class="">
-                    <a
-                      class="text-indigo-700 hover:text-primary-600 dark:hover:text-primary-400 mr-3 text-sm font-medium "
-                      href="/tags/next-js">{item.main_category}</a>
+              <div class="text-blue-700 hover:text-primary-600 dark:hover:text-primary-400 mr-3 text-sm font-medium">
+                    {item.data.main_category}
               </div>
                 <h2 class="text-2xl leading-8 font-bold tracking-tight">
-                  <a
-                    class="text-gray-800 dark:text-gray-100"
-                    href="/blog/release-of-tailwind-nextjs-starter-blog-v2.0"
-                    >{item.title}</a>
+                  {item.data.title}
                 </h2>
                 <div
                 class="prose max-w-none text-gray-600 dark:text-gray-400"
               >
-                {item.abstract}
+                {item.data.abstract}
               </div>
               <div class="pt-4">
                 <dd
               class="text-base leading-6  text-gray-400 dark:text-gray-300"
             >
-              <time datetime={item.publish_date}>{  
+              <time datetime={item.data.published_at}>{  
               () => {
-                const localDate = new Date(item.publish_date)
+                const localDate = new Date(item.data.published_at)
                 const formatedDate = `${localDate.getDate()} de ${localDate.toLocaleString('default', { month: 'long' })}, ${localDate.getFullYear()}`  
                 return formatedDate;
               }
@@ -52,6 +50,7 @@ const entries = await pb.collection('posts').getList(1,5,{
           </div>
 
         </div>
+        </a>
 
         </li>
 
