--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -21,13 +21,10 @@ import logo from '../assets/logo.png';
       >
         <a
           class="hover:text-primary-500 dark:hover:text-primary-400 m-1 font-medium text-gray-900 dark:text-gray-100"
-          href="/blog">Blog</a
+          href="/">Blog</a
         ><a
           class="hover:text-primary-500 dark:hover:text-primary-400 m-1 font-medium text-gray-900 dark:text-gray-100"
           href="/tags">Topicos</a
-        ><a
-          class="hover:text-primary-500 dark:hover:text-primary-400 m-1 font-medium text-gray-900 dark:text-gray-100"
-          href="/projects">Tools</a
         ><a
           class="hover:text-primary-500 dark:hover:text-primary-400 m-1 font-medium text-gray-900 dark:text-gray-100"
           href="/about">About</a>
