--- a/src/components/adminUI/RichTextEditor.astro
+++ b/src/components/adminUI/RichTextEditor.astro
@@ -1,16 +1,38 @@
 ---
 import "../../styles/global.css";
-
 ---
-
-
-
-<main >
-  <div>
-<div id="editor">
-    <p>Hello World!</p>
-    <p>Some initial <strong>bold</strong> text</p>
-    <p><br /></p>
+<link
+href="https://cdn.jsdelivr.net/npm/quill@2/dist/quill.snow.css"
+rel="stylesheet"
+/>
+<main>
+  <div class="text-center text-5xl py-10 ">
+    <h1>Crear un nuevo post</h1>
   </div>
-</div>
+  <div>
+    <div class="hover:bg-gray-100">
+      <div id="editor">
+        <p>Hello World!</p>
+        <p>Some initial <strong>bold</strong> text</p>
+        <p><br /></p>
+      </div>
+    </div>
+  </div>
 </main>
+<script>
+  import Quill from "quill";
+  const toolbarOptions = [
+    [{ header: [1, 2, 3, false] }],
+    ["bold", "italic", "underline"],
+    [{ list: "ordered" }, { list: "bullet" }],
+    ["blockquote"],
+  [{ align: '' }, { align: 'center' }, { align: 'right' }],
+    ["link", "image"],
+  ];
+  const quill = new Quill("#editor", {
+    modules: {
+      toolbar: toolbarOptions,
+    },
+    theme: "snow",
+  });
+</script>
