modificar Single Post para darle formato a los htmls

--- a/src/components/adminUI/RichTextEditor.astro
+++ b/src/components/adminUI/RichTextEditor.astro
@@ -35,4 +35,7 @@ rel="stylesheet"
     },
     theme: "snow",
   });
+
+  setInterval(()=>console.log(quill.getSemanticHTML(0, 50000)),5000)
+
 </script>
