--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -10,7 +10,7 @@ import logo from '../assets/logo.png';
     <a class="break-words" aria-label="TailwindBlog" href="/"
       ><div class="flex items-center justify-between">
         <div class="mr-3">
-          <img src={logo.src} alt="TailwindBlog" class="h-15" />
+          <Image src={logo} height="150" width="60" alt="TailwindBlog" class="h-15"/>
         </div><div class="hidden h-6 text-2xl font-semibold sm:block">
           Nicolytics
         </div>
