--- a/src/pages/editor/list-posts.astro
+++ b/src/pages/editor/list-posts.astro
@@ -1,11 +1,10 @@
 ---
 import "../../styles/global.css";
 import AdminLayout from "../../layouts/AdminLayout.astro";
-import AdminUI from "../../components/adminUI/AdminUI.astro";
-
+import ListPost from "../../components/adminUI/views/ListPost.astro";
 
 
 ---
 <AdminLayout>
-    <AdminUI/>
+    <ListPost/>
 </AdminLayout>
