--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,6 +2,9 @@
 import NavBar from '../components/NavBar.astro';
 import Layout from '../layouts/Layout.astro';
 import "../styles/global.css";
+
+export const prerender = true;
+
 ---
 <Layout>
     <NavBar />
