--- a/src/pages/[category].astro
+++ b/src/pages/[category].astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection } from "astro:content";
 import HomeBlogEntries from "../components/blog/HomeBlogEntries.astro";
-import NavBar from "../components/NavBar.astro";
+import NavBar from '../components/blog/navigation/NavBar.astro';
 import Layout from "../layouts/Layout.astro";
 import "../styles/global.css";
 
