--- a/src/pages/[category]/[cid].astro
+++ b/src/pages/[category]/[cid].astro
@@ -1,6 +1,6 @@
 ---
 import SinglePost from '../../components/blog/SinglePost.astro';
-import NavBar from '../../components/NavBar.astro';
+import NavBar from '../../components/blog/navigation/NavBar.astro';
 import Time from '../../components/Time.astro';
 import Layout from '../../layouts/Layout.astro';
 import "../../styles/global.css";
