--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import NavBar from '../components/NavBar.astro';
+import NavBar from '../components/blog/navigation/NavBar.astro';
 import Layout from '../layouts/Layout.astro';
 import "../styles/global.css";
 
