--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import HomeBlogEntries from '../components/blog/HomeBlogEntries.astro';
-import NavBar from '../components/NavBar.astro';
+import NavBar from '../components/blog/navigation/NavBar.astro';
 import Layout from '../layouts/Layout.astro';
 import "../styles/global.css";
 
