--- a/src/components/blog/HomeBlogEntries.astro
+++ b/src/components/blog/HomeBlogEntries.astro
@@ -4,7 +4,7 @@ import { getCollection } from "astro:content";
 import Time from "../Time.astro";
 import TagList from "./navigation/TagList.astro";
 
-const allBlogPosts = await getCollection("blog_posts");
+const allBlogPosts = await getCollection("db_blog_posts");
 let resultPosts = allBlogPosts.sort((a:any, b:any) => {
   const b_published_date = new Date(b.data.published_at).getTime()
   const a_published_date = new Date(a.data.published_at).getTime()
