--- a/src/pages/[category]/[cid].astro
+++ b/src/pages/[category]/[cid].astro
@@ -8,7 +8,7 @@ import "../../styles/global.css";
 import { getCollection, render } from "astro:content";
 
 export async function getStaticPaths() {
-  const posts = await getCollection('blog_posts');
+  const posts = await getCollection('db_blog_posts');
   return posts.map(post => ({
     params: { cid:  post.data.content_id, category: post.data.main_category.replaceAll(" ","-").toLowerCase()},
     props: { post },
