--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -1,5 +1,4 @@
 ---
-import LoginForm from '../components/adminUI/LoginForm.astro';
 import "../styles/global.css";
 import AuthLayout from '../layouts/AuthLayout.astro';
 
@@ -80,23 +79,13 @@ import AuthLayout from '../layouts/AuthLayout.astro';
         </div>
       </form>
       <div class="pt-5 text-center text-gray-400 text-xs">
-        <span>
-          Copyright © 2021-{new Date().getFullYear()}
-          <a
-            href="https://codepen.io/uidesignhub"
-            rel=""
-            target="_blank"
-            title="Ajimon"
-            class="text-green hover:text-green-500">AJI</a
-          ></span
-        >
+
       </div>
     </div>
   </div>
 </AuthLayout>
 
 <script>
-  import { actions } from 'astro:actions';
   import Swal from 'sweetalert2';
 
   const form = document.querySelector('form') as HTMLFormElement;
@@ -108,30 +97,35 @@ import AuthLayout from '../layouts/AuthLayout.astro';
   form.addEventListener('submit', async (e) => {
     e.preventDefault();
     btnSubmit.setAttribute('disabled', 'disabled');
+    console.log('submit !')
 
     const formData = new FormData(form);
 
-    const resp = await signIn('credentials', {
+
+    const res = await signIn('credentials', {
       email: formData.get('email') as string,
       password: formData.get('password') as string,
-      redirect: false,
+      redirect: false
     });
 
-    console.log({ resp });
 
-    if (resp) {
+
+
+    console.log({ res });
+
+    if (res) {
       Swal.fire({
         icon: 'error',
         title: 'Error al ingresar',
         // text: error.message,
-        text: 'Usuario / Contraseña no son correctos',
+        text: 'Los datos ingresados no son correctos',
       });
       btnSubmit.removeAttribute('disabled');
       return;
     }
 
     // TODO:
-    window.location.replace('/');
+    window.location.replace('/editor/list-posts');
   });
 
   bntGoogle.addEventListener('click', async () => {
@@ -155,5 +149,6 @@ import AuthLayout from '../layouts/AuthLayout.astro';
       bntGoogle.removeAttribute('disabled');
     }
   });
+
 </script>
 
