--- a/src/layouts/AdminLayout.astro
+++ b/src/layouts/AdminLayout.astro
@@ -8,6 +8,12 @@ import SideBar from "../components/adminUI/SideBar.astro";
     <meta name="robots" content="noindex" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.13/flatpickr.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.13/flatpickr.min.css">
+    <link
+href="https://cdn.jsdelivr.net/npm/quill@2/dist/quill.snow.css"
+rel="stylesheet"
+/>
     <title>Blog Backoffice</title>
   </head>
 
