--- a/src/layouts/AdminLayout.astro
+++ b/src/layouts/AdminLayout.astro
@@ -5,6 +5,8 @@ import SideBar from "../components/adminUI/SideBar.astro";
 <!doctype html>
 <html lang="en">
   <head>
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
     <meta name="robots" content="noindex" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
